--- a/src/assets/styles/output.css
+++ b/src/assets/styles/output.css
@@ -463,6 +463,7 @@ body {
 }
 
 #root {
+  z-index: 40;
   height: 100%;
   width: 100%;
 }
@@ -470,6 +471,7 @@ body {
 #alert-messages:has(*) {
   position: fixed;
   inset: 0px;
+  z-index: 50;
   display: grid;
   height: 100%;
   width: 100%;
@@ -504,6 +506,10 @@ input {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1.5rem;
+}
+
+.site-parent:hover .edit {
+  display: grid;
 }
 
 *, ::before, ::after {
@@ -628,6 +634,10 @@ input {
   right: -0.5rem;
 }
 
+.-right-7 {
+  right: -1.75rem;
+}
+
 .-top-2 {
   top: -0.5rem;
 }
@@ -640,56 +650,12 @@ input {
   right: 0px;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.-right-1\/2 {
-  right: -50%;
-}
-
-.-right-12 {
-  right: -3rem;
-}
-
-.-right-4 {
-  right: -1rem;
-}
-
-.-right-10 {
-  right: -2.5rem;
-}
-
-.-right-8 {
-  right: -2rem;
-}
-
-.-right-7 {
-  right: -1.75rem;
-}
-
 .top-9 {
   top: 2.25rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .z-50 {
@@ -733,8 +699,16 @@ input {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-20 {
   height: 5rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-\[30rem\] {
@@ -754,26 +728,6 @@ input {
   height: 100%;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -782,8 +736,16 @@ input {
   width: 5rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-36 {
   width: 9rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[min\(50rem\2c 100\%\)\] {
@@ -801,22 +763,6 @@ input {
 
 .w-full {
   width: 100%;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-24 {
-  width: 6rem;
 }
 
 .cursor-pointer {
@@ -843,28 +789,12 @@ input {
   justify-content: center;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
-}
-
-.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .rounded-\[50\%\] {
@@ -879,43 +809,9 @@ input {
   border-radius: 0.375rem;
 }
 
-.border-y-4 {
-  border-top-width: 4px;
-  border-bottom-width: 4px;
-}
-
-.border-y-2 {
-  border-top-width: 2px;
-  border-bottom-width: 2px;
-}
-
-.border-t-2 {
-  border-top-width: 2px;
-}
-
-.border-slate-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.border-slate-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(148 163 184 / var(--tw-border-opacity));
-}
-
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-slate-400 {
@@ -928,24 +824,9 @@ input {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-20 {
-  --tw-bg-opacity: 0.2;
-}
-
-.bg-opacity-100 {
+.bg-white {
   --tw-bg-opacity: 1;
-}
-
-.bg-opacity-10 {
-  --tw-bg-opacity: 0.1;
-}
-
-.bg-opacity-5 {
-  --tw-bg-opacity: 0.05;
-}
-
-.bg-opacity-60 {
-  --tw-bg-opacity: 0.6;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -985,14 +866,14 @@ input {
   padding-bottom: 0.125rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pl-3 {
@@ -1059,15 +940,6 @@ input {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.opacity-60 {
-  opacity: 0.6;
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1103,14 +975,6 @@ input {
 
 .hover\:bg-opacity-10:hover {
   --tw-bg-opacity: 0.1;
-}
-
-.hover\:bg-opacity-20:hover {
-  --tw-bg-opacity: 0.2;
-}
-
-.hover\:bg-opacity-30:hover {
-  --tw-bg-opacity: 0.3;
 }
 
 .hover\:bg-opacity-25:hover {
