--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -18,13 +18,16 @@
 		@apply h-[100vh] text-[80%];
 	}
 	body {
-		@apply font-[sf-pro-en] h-full bg-[url('/imgs/background/test.jpg')] bg-cover bg-no-repeat;
+		@apply font-[sf-pro-en] h-full bg-cover bg-no-repeat;
 	}
 	#root {
 		@apply w-full h-full z-40;
 	}
 	#alert-messages:has(*) {
 		@apply w-full h-full grid place-items-center fixed inset-0 z-50 bg-[#33333356];
+	}
+	#background-img {
+		@apply w-full h-full fixed inset-0;
 	}
 	object {
 		@apply rounded-[50%];
@@ -44,6 +47,18 @@
 	// components
 	.main-input {
 		@apply pl-6 py-2 rounded-lg;
+	}
+	// loading
+	.loading object {
+		animation: spin 1.5s alternate infinite;
+	}
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(180deg);
+		}
 	}
 	// site
 	.site-parent:hover .edit {
